--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <a href="{{ site.baseurl }}/">Contents</a>
         <a href="https://canvas.stanford.edu/courses/131536">Canvas</a>
         <a href="https://www.gradescope.com/courses/222525">Gradescope</a>
-        <a href="https://stanford-3kml.stanford.edu">Slack</a>
+        <a href="https://stanford-3kml.slack.com">Slack</a>
         <a href="https://github.com/EricDarve/me343-cme216-winter-2021">GitHub</a>
     </nav>
 </header>
