--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!--- Header and nav template site-wide -->
 <header>
     <nav class="group">
-        <a href="{{ site.baseurl }}/">Contents</a>
+        <a href="{{ site.baseurl }}/">Homepage</a>
         <a href="https://canvas.stanford.edu/courses/131536">Canvas</a>
         <a href="https://www.gradescope.com/courses/222525">Gradescope</a>
         <a href="https://stanford-3kml.slack.com">Slack</a>
