--- a/css/cme216.scss
+++ b/css/cme216.scss
@@ -219,30 +219,30 @@ a {
 }
 
 /* Links: replicate underline that clears descenders */
-p > a:link, p > a:visited { color: inherit; }
+// p > a:link, p > a:visited { color: inherit; }
 
-p > a:link {
-    background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
-    background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
-    -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    background-repeat: no-repeat, no-repeat, repeat-x;
-    text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
-    background-position: 0% 93%, 100% 93%, 0% 93%;
-}
+// p > a:link {
+//     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
+//     background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
+//     -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+//     -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+//     background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+//     background-repeat: no-repeat, no-repeat, repeat-x;
+//     text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+//     background-position: 0% 93%, 100% 93%, 0% 93%;
+// }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-    p > a:link {
-        background-position-y: 87%, 87%, 87%;
-    }
-}
+// @media screen and (-webkit-min-device-pixel-ratio: 0) {
+//     p > a:link {
+//         background-position-y: 87%, 87%, 87%;
+//     }
+// }
 
-p > a:link::selection,
-p > a:link::-moz-selection {
-    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-    background: #b4d5fe;
-}
+// p > a:link::selection,
+// p > a:link::-moz-selection {
+//     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+//     background: #b4d5fe;
+// }
 
 /* ==============================
  *              Code
